fix bug alignment

--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,6 @@ circle.node {
     display: -ms-flexbox;
     display: flex;
 }
-.visualization-text {
-	padding-left: 0;
-}
 .step {
     margin-bottom: 200px;
 }
